--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -86,6 +86,10 @@
                 <source>Profile</source>
                 <target>Profil</target>
             </trans-unit>
+            <trans-unit id="profile.update">
+                <source>Profile update</source>
+                <target>Mise à jour du profil</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
