--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -45,7 +45,7 @@
                 <target>Mot de passe</target>
             </trans-unit>
             <trans-unit id="register.repeated_password">
-                <source>Repated password</source>
+                <source>Repeated password</source>
                 <target>Mot de passé</target>
             </trans-unit>
             <trans-unit id="register.full_name">
@@ -60,6 +60,23 @@
             <trans-unit id="notifications.none">
                 <source>You have not notifications</source>
                 <target>Vous n'avez pas de notifications</target>
+            </trans-unit>
+
+            <trans-unit id="flashes.usernameused">
+                <source>This username is already used</source>
+                <target>Ce nom d'utilisateur est déjà utilisé</target>
+            </trans-unit>
+            <trans-unit id="flashes.emailused">
+                <source>This e-mail is already used</source>
+                <target>Cet e-mail est déjà pris</target>
+            </trans-unit>
+            <trans-unit id="flashes.profilesuccess">
+                <source>Your profile has been updated</source>
+                <target>Votre profil a été mis a jour</target>
+            </trans-unit>
+            <trans-unit id="flashes.passwordchange">
+                <source>Your password has changed</source>
+                <target>Votre mot de passe a changé</target>
             </trans-unit>
 
             <trans-unit id="email.registration">
@@ -89,6 +106,14 @@
             <trans-unit id="profile.update">
                 <source>Profile update</source>
                 <target>Mise à jour du profil</target>
+            </trans-unit>
+            <trans-unit id="profile.updatebtn">
+                <source>Update</source>
+                <target>Mettre à jour</target>
+            </trans-unit>
+            <trans-unit id="profile.passwordupdate">
+                <source>Password change</source>
+                <target>Changement de mot de passe</target>
             </trans-unit>
         </body>
     </file>
