--- a/translations/validators.hu.xlf
+++ b/translations/validators.hu.xlf
@@ -8,7 +8,7 @@
             </trans-unit>
             <trans-unit id="register.usernameused">
                 <source>This username is already used</source>
-                <target>Ez a felhasználónév foglalt</target>
+                <target>Ez a felhasználónév foglalt2</target>
             </trans-unit>
         </body>
     </file>
